--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -1,3 +1,173 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// これを全部
+// app/assets/stylesheets/books.css.scss に
+// コピー & 貼り付けする
+ 
+// 色の設定
+$bgColor: #dfcf8f;
+$baseColor: #dff1f8;
+
+$textBlack: #444444;
+$textWhite: #ffffff;
+
+$danger: #e24545;
+$attention: #a89400;
+$safety: #02a8f5;
+
+$border-color: darken($bgColor, 22%);
+
+// 便利mixin
+@mixin transition($transitionProperty: all, $transitionDuration: 0.2s) {
+  transition-property: $transitionProperty;
+  transition-duration: $transitionDuration;
+}
+@mixin relative($z-index-value: 1) {
+  position: relative;
+  z-index: $z-index-value;
+}
+@mixin absolute($z-index-value: 1, $position1: left, $position1-value: 0, $position2: top, $position2-value: 0) {
+  position: absolute;
+  z-index: $z-index-value;
+  #{$position1}: $position1-value;
+  #{$position2}: $position2-value;
+}
+
+.books {
+  width: 900px;
+  margin: 0 auto 40px;
+  padding: 0;
+  border: 8px solid $border-color;
+  overflow: hidden;
+}
+.book {
+  width: 20%;
+  border: 8px solid $border-color;
+  padding: 18px 20px 8px;
+  float: left;
+  background: linear-gradient(to bottom, $bgColor 0%,darken($bgColor, 10%) 100%);
+  box-shadow: rgba(0, 0, 0, .4) 0 2px 1px inset;
+  box-sizing: border-box;
+  @include relative;
+}
+.book:after {
+  content: "";
+  width: 162px;
+  height: 14px;
+  display: block;
+  background: linear-gradient(to bottom, darken($bgColor, 24%) 0%,darken($bgColor, 34%) 100%);
+  @include absolute(2, left, 1px, bottom, 0);
+}
+.book__title {
+  margin: 0;
+  padding: 12px 10px 28px;
+  line-height: 1.4;
+  height: 160px;
+  font-size: 14px;
+  color: $textBlack;
+  overflow: hidden;
+  box-sizing: border-box;
+  background: linear-gradient(to bottom, lighten($baseColor, 2%) 0%,darken($baseColor, 4%) 100%);
+  box-shadow: rgba(0, 0, 0, .2) 0 1px 4px, rgba(255, 255, 255, 1) 0 1px 6px inset;
+  text-shadow: rgba(255, 255, 255, 1) 0 1px 0;
+  border: rgba(0, 0, 0, .1) solid 1px;
+  @include relative(3);
+}
+.book__title:after {
+  content: "";
+  width: 5px;
+  height: 100%;
+  display: block;
+  background: linear-gradient(to bottom, darken($baseColor, 4%) 0%,darken($baseColor, 10%) 100%);
+  @include absolute(3, right, 0, top, 0);
+}
+.book__price {
+  margin: 0;
+  padding: 0 32px 6px;
+  text-align: right;
+  line-height: 2;
+  font-size: 14px;
+  color: $textBlack;
+  width: 100%;
+  box-sizing: border-box;
+  @include absolute(3, left, 0, bottom, 0);
+} 
+
+// ボタンの色設定
+$delete: $danger;
+$edit: $attention;
+$show: $safety;
+
+// ボタンmixin
+@mixin button($button-color) {
+  display: inline-block;
+  padding: 5px 0.8em;
+  line-height: 1;
+  font-size: 12px;
+  text-decoration: none;
+  margin: 0 1px;
+  border-radius: 4px;
+  font-size: 11px;
+  background-color: transparent;
+  border: $button-color solid 2px;
+  box-sizing: border-box;
+  color: $button-color;
+  &:hover {
+    background-color: rgba(lighten($button-color, 20%), .3);
+    box-shadow: rgba(0, 0, 0, .4) 0 1px 0;
+  }
+}
+
+.book__actions {
+  display: block;
+  list-style: none;
+  margin: 0;
+  padding: 8px 0;
+  text-align: center;
+  background-color: transparent;
+  width: 162px;
+  height: 26px;
+  @include absolute(3, left, 1px, bottom, 0);
+  @include transition;
+  &:hover {
+    background-color: rgba(255, 255, 255, .9);
+  }
+}
+
+.book__actions {
+  [class^="book__action--"] {
+    display: none;
+    a {
+      opacity: 0;
+      @include transition;
+    }
+  }
+  &:hover {
+    [class^="book__action--"] {
+      display: inline;
+      a {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.book__action--show {
+  a {
+    @include button($show);
+  }
+}
+
+.book__action--edit {
+  a {
+    @include button($edit);
+  }
+}
+
+.book__action--delete {
+  a {
+    @include button($delete);
+  }
+}
