--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <header class="header">
+    <h1 class="header__logo">BookShelf</h1>
+  </header>
 <%= yield %>
 
 </body>
